--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "Bases heatmap view",
   "version": "1.0.0",
   "minAppVersion": "1.10.0",
-  "description": "Calendar-style heatmap visualization for any date-based property in your Bases tables. Track activity, habits, progress, or any numeric/date-related data with beautiful color-coded squares.",
-  "author": "Mark Serafinovsky"
+  "description": "Github-style heatmap visualization for any date-based property in your Bases tables. Track activity, habits, progress, or any numeric/date-related data with color-coded squares.",
+  "author": "Mark Serafinovsky",
+  "isDesktopOnly": false
 }
