--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "culori": "^4.0.2",
+    "culori": "4.0.2",
     "i18next": "25.8.9",
-    "preact": "^10.28.3"
+    "preact": "10.28.3"
   },
   "devDependencies": {
-    "@eslint/js": "10.0.1",
-    "@types/culori": "^4.0.1",
+    "@eslint/js": "9.39.2",
+    "@types/culori": "4.0.1",
     "@types/node": "25.2.3",
     "@vitest/coverage-v8": "4.0.18",
     "esbuild": "0.27.3",
-    "eslint": "10.0.0",
+    "eslint": "9.39.2",
     "eslint-plugin-obsidianmd": "0.1.9",
     "globals": "17.3.0",
     "obsidian": "1.12.0",
